# sewpy

./: MANIFEST.in  README.rst  pyproject.toml
examples/: minimal_demo.py
sewpy/: sewpy.py
src/sewpy/: __init__.py  psf_array.py  psf_default.npy  sewpy.py  sextractor_params.txt
