[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sewpy"
version = "2.0.0"
description = "Thin Python wrapper for running SExtractor on FITS images."
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
authors = [{ name = "Yucel Kilic" }]
keywords = ["astronomy", "sextractor", "astropy", "catalog", "FITS"]
dependencies = ["numpy>=1.23", "astropy>=5"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["sewpy*"]

[tool.setuptools.package-data]
sewpy = [
  "psf_default.npy",
  "sextractor_params.txt",
]